改用填入人名

--- a/Pages/Create.cshtml
+++ b/Pages/Create.cshtml
@@ -64,12 +64,7 @@
                     <input asp-for="Review.FoodName"  />
                 </td>
                 <td>
-                    <select asp-for="Review.Recorder" >
-                        <option value="Leo">Leo</option>
-                        <option value="長勝">長勝</option>
-                        <option value="Allen">Allen</option>
-                        <option value="Top">Top</option>
-                    </select>
+                    <input asp-for="Review.Recorder" id="recorderInput" />
                 </td>
                 <td>
                     <input asp-for="Review.Memo"  />
