--- a/Pages/Edit.cshtml
+++ b/Pages/Edit.cshtml
@@ -26,12 +26,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Review.Recorder" class="control-label"></label>
-                <select asp-for="Review.Recorder" class="form-control">
-                    <option value="Leo">Leo</option>
-                    <option value="長勝">長勝</option>
-                    <option value="Allen">Allen</option>
-                    <option value="Top">Top</option>
-                </select>
+                <input asp-for="Review.Recorder" id="recorderInput" class="form-control">
                 <span asp-validation-for="Review.Recorder" class="text-danger"></span>
             </div>
             <div class="form-group">
