--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,10 +2,10 @@
 @model IndexModel
 
 @{
-    ViewData["Title"] = "公司訂便當黑名單";
+    ViewData["Title"] = "訂便當筆記本";
 }
 
-<h1>公司「不訂」便當清單</h1>
+<h1>訂餐筆記</h1>
 
 <p></p>
 <input type="text" id="filterInput" placeholder="篩選店家名稱...">
